# dotfiles

./: .Rprofile  .Rprofile.disabled  .Xdefaults  .Xresources.disabled  .ackrc  .bash_aliases  .bashrc  .ccl-init.lisp  .compton.conf  .conkyrc  .driverc  .editorconfig  .emacs.disabled  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .gmrunrc  .i3status.conf  .irbrc  .lua.lua  .octaverc  .praateditrc  .pydistutils.cfg  .pythonstartup.disabled  .spacemacs  .sqliterc  .tmux.conf  .vimrc  .xonshrc  README.md  R_install.sh  abbrevs.el  bashrc  com.googlecode.iterm2.plist  configuration.nix  dotfiles_setup.pl  editorconfig  elan_fx_install.sh  elan_install.sh  (+27 more)
.config/: flake8
R/: environment.yml  lintr  r-Darwin.yml  r-Linux.yml  r-common.yml
broot/: custom.hjson  install.sh
containers/: containers.conf
direnv/: direnvrc
emacs/: abbrevs.el  doom_install.sh  install.sh  minit.el  org-html-head.css  org-html-head.js  org-indent.patch  org-re-reveal-extra.css  spacemacs  spacemacs.sh  spacemacs_setup.sh
etc/: install.sh
fish/: config.fish  fish_install.sh  fish_variables  install.sh
fontconfig/: fonts.conf
git/: attributes  config  ignore
latexmk/: latexmkrc
lua/: README.md
mamba/: base.yml  condarc  dl.yml  ffmpeg-cuda.yml  install.sh  mamba_install.sh  r.yml  umrk.yml
matplotlib/: matplotlibrc
misc/: brew_install.sh  btop_install.sh  cmake_install.sh  csl_install.sh  elan_install.sh  elm_install.sh  (+15 more)
python/umrk/: README.rst  install.sh  pyproject.toml  setup.cfg
python/umrk/src/umrk/: __init__.py  inspect.py  phon.py  ramscar.py  stats.py
(+101 files in other folders)
