[tool.poetry]
name = "umrk"
version = "0.1.0"
description = ""
authors = ["David Lukes <dafydd.lukes@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
altair = "^4.1.0"
pandas = "^1.3.3"
numpy = "^1.21.2"
scipy = "^1.7.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^7.27.0"
altair-viewer = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
