[metadata]
name = umrk
version = 42
author = David Lukes
author_email = dafydd.lukes@gmail.com
description = The Utility Muffin Research Kitchen
long_description = file: README.md
long_description_content_type = text/markdown
# url =
# project_urls =
# classifiers =

[options]
package_dir = =src
packages = find:
python_requires = >=3.8
install_requires =
  altair>=4
  pandas>=1
  numpy>=1.21
  scipy>=1.7.3
  scikit-learn>=1

[options.packages.find]
where = src
